--- a/contact.html
+++ b/contact.html
@@ -133,109 +133,61 @@
         </div>
     </nav>
 
-    <section class="bannerBlogSinglePage">
+    <section class="bannerContact">
         <div class="aboutTitle">
-            <h3>blog single page</h3>
-            <p>home / blog single page</p>
+            <h3>contact us</h3>
+            <p>home / contact us</p>
         </div>
     </section>
 
-    <section class="blogContent">
-        <div class="blog">
-            <div class="cards">
-                <div class="images">
-                    <img src="img/imgBlog.jpg" alt="">
-                </div>
-                <div class="blogText">
-                    <h3>welcome play for everyone watcher wild</h3>
-
-                    <ul class="details">
-                        <li><i class="fas fa-calendar"></i>20 januari, 2020</li>
-                        <li><i class="fas fa-user"></i>sahjan sagor</li>
-                        <li><i class="fas fa-comments"></i>16 comments</li>
-                    </ul>
-
-                    <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Taciti gravida Vestibulum Eu augue augue duis rhoncus sociosqu. Quam nec rhoncus sociosquerat potentiye volutpat eleifend ni malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictumst, leo donec vivamus potenti cursus cras rhoncus sociosquerat phasellus ullamcorper.</p>
-
-                    <ul class="imgSingleBlog">
-                        <li><div class="images">
-                            <img src="img/singleBlog1.jpg" alt="">
-                        </div></li>
-                        <li><div class="images">
-                            <img src="img/singleBlog2.jpg" alt="">
-                        </div></li>
-                    </ul>
-
-                    <div class="descriptionBlog">
-                        <h4>Steal into The inner Sanctuary, I Throw Myself Down Among The Hall Grass Buzz The Little World Among The Stalks, And Grow Famar With Count Insec And Fies Then Feel The Presence of The Almighty</h4>
-                    </div>
-
-                    <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Taciti gravida Vestibulum Eu augue augue duis rhoncus sociosqu. Quam nec rhoncus sociosquerat potentiye volutpat eleifend ni malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictumst, leo donec vivamus potenti cursus cras rhoncus sociosquerat phasellus ullamcorper.</p>
-
-                    <ul class="tagsAndShare">
-                        <li class="tags">
-                            <ul>
-                                <li>tags: </li>
-                                <li>travel</li>
-                                <li>photography</li>
-                                <li>lifestyles</li>
-                            </ul>
-                        </li>
-                        <ul class="share">
-                            <li><a href=""></a><i class="fab fa-facebook"></i></li>
-                            <li><a href=""><i class="fab fa-dribbble"></i></a></li>
-                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fab fa-google"></i></a></li>
-                        </ul>
-                    </ul>
-                </div>
-            </div>
-            <h3 class="comments">02 comments</h3>
-            <ul class="commentContent">
+    <div class="contentContact">
+        <div class="contact">
+            <h3>contact information</h3>
+            <ul class="wrapper">
                 <li>
-                    <ul class="content">
-                        <span><i class="fas fa-share"></i>reply</span>
-                        <div class="images">
-                            <img src="img/comment-1.jpg" alt="">
-                        </div>
+                    <ul class="contentWrapper">
+                        <i class="fas fa-map-marker"></i>
 
-                        <div class="contentText">
-                            <h3>alisha smith</h3>
-                            <h4>november 15,2022 at 5:00pm</h4>
-                            <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Tacit malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictums.</p>
+                        <div class="content">
+                            <h3>office address</h3>
+                            <p>Suite 1307, Level 12, Tropical Center 218 New Elephant Road, Dhaka - 1205</p>
                         </div>
                     </ul>
                 </li>
                 <li>
-                    <ul class="content">
-                        <span><i class="fas fa-share"></i>reply</span>
-                        <div class="images">
-                            <img src="img/comment-1.jpg" alt="">
-                        </div>
+                    <ul class="contentWrapper">
+                        <i class="fas fa-map-marker"></i>
 
-                        <div class="contentText">
-                            <h3>alisha smith</h3>
-                            <h4>november 15,2022 at 5:00pm</h4>
-                            <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Tacit malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictums.</p>
+                        <div class="content">
+                            <h3>Phone Number</h3>
+                            <p>+880123 456 789, +880123 456 789, 02-961193689</p>
                         </div>
                     </ul>
                 </li>
                 <li>
-                    <ul class="content">
-                        <span><i class="fas fa-share"></i>reply</span>
-                        <div class="images">
-                            <img src="img/comment-1.jpg" alt="">
-                        </div>
+                    <ul class="contentWrapper">
+                        <i class="fas fa-map-marker"></i>
 
-                        <div class="contentText">
-                            <h3>alisha smith</h3>
-                            <h4>november 15,2022 at 5:00pm</h4>
-                            <p>Aliquam euismod at potenti velit risus erat nulla blandit leo.rhoncus socioserqu Sagittis cubilia turpis Tacit malesuada ridiculus Dapibus vel nascetur. rhoncus sociosquerat dictums.</p>
+                        <div class="content">
+                            <h3>Email Address</h3>
+                            <p>support@yourmailname.com support@yourmailname.com</p>
                         </div>
                     </ul>
                 </li>
+                <li>
+                    <ul class="contentWrapper">
+                        <i class="fas fa-map-marker"></i>
+
+                        <div class="content">
+                            <h3>Website Address</h3>
+                            <p>http://yoursitename.com</p>
+                        </div>
+                    </ul>
+                </li>
+
+
             </ul>
-
+        </div>
             <div class="messagesBox">
                 <h3>leave a comments</h3>
 
@@ -248,113 +200,7 @@
 
                 <button class="btnFill">submit message</button>
             </div>
-        </div>
-        <ul class="blogSider">
-            <li><div class="cards searchBox">
-                <input type="text" placeholder="Search Here">
-            </div></li>
-            <li><div class="cards">
-                <h3>post category</h3>
-                <table>
-                    <tr>
-                        <td>action</td>
-                        <td>( 20 )</td>
-                    </tr>
-                    <tr>
-                        <td>adventure</td>
-                        <td>( 20 )</td>
-                    </tr>
-                    <tr>
-                        <td>fighting</td>
-                        <td>( 20 )</td>
-                    </tr>
-                    <tr>
-                        <td>flight imulstion</td>
-                        <td>( 20 )</td>
-                    </tr>
-                    <tr>
-                        <td>platform</td>
-                        <td>( 20 )</td>
-                    </tr>
-                    <tr>
-                        <td>racing</td>
-                        <td>( 20 )</td>
-                    </tr>
-                </table>
-            </div></li>
-            <li><div class="cards">
-                <h3>popular post</h3>
-                <div class="contentPopular">
-                    <div class="popularPost">
-                        <div class="images">
-                            <img src="img/thumb-1.jpg" alt="">
-                        </div>
-                        <div class="contentPost">
-                            <h4>pubg</h4>
-                            <p>november 15, 2022</p>
-                        </div>
-                    </div>
-                    <div class="popularPost">
-                        <div class="images">
-                            <img src="img/thumb-2.jpg" alt="">
-                        </div>
-                        <div class="contentPost">
-                            <h4>sniper 2 ghost warrior</h4>
-                            <p>november 15, 2022</p>
-                        </div>
-                    </div>
-                    <div class="popularPost">
-                        <div class="images">
-                            <img src="img/thumb-3.jpg" alt="">
-                        </div>
-                        <div class="contentPost">
-                            <h4>free fire</h4>
-                            <p>november 15, 2022</p>
-                        </div>
-                    </div>
-                    <div class="popularPost">
-                        <div class="images">
-                            <img src="img/thumb-4.jpg" alt="">
-                        </div>
-                        <div class="contentPost">
-                            <h4>need fr spe</h4>
-                            <p>november 15, 2022</p>
-                        </div>
-                    </div>
-                    <div class="popularPost">
-                        <div class="images">
-                            <img src="img/thumb-5.jpg" alt="">
-                        </div>
-                        <div class="contentPost">
-                            <h4>need for speed</h4>
-                            <p>november 15, 2022</p>
-                        </div>
-                    </div>
-                </div>
-            </div></li>
-            <li>
-                <div class="cards">
-                    <h3>popular tags</h3>
-
-                    <ul class="tags">
-                        <li><a href="">pubg</a></li>
-                        <li><a href="">dota 2</a></li>
-                        <li><a href="">free fire</a></li>
-                        <li><a href="">call of duty</a></li>
-                        <li><a href="">delta force</a></li>
-                        <li><a href="">call of duty 2</a></li>
-                        <li><a href="">delta force 2</a></li>
-                        <li><a href="">resident evil</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <div class="cards">
-                    <img src="img/game-1.jpg" alt="">
-                </div>
-            </li>
-        </ul>
-    </section>
+    </div>
 
 
     <section class="newsLatter">
