--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
     </section>
 
-    <div class="contentTitle release">
+    <div class="titleNewReleaseGame">
         <div class="title">
             <h3>new released game</h3>
             <p>Conveniently customize proactive web services for leveraged without continualliery</p>
@@ -275,10 +275,12 @@
         </div>
     </section>
 
-    <div class="contentTitle bigMatch">
+    <div class="titleBigMatch ">
         <div class="title">
             <h3>big match</h3>
+            </div>
 
+        <section class="bigMatch">
             <div class="images">
                 <img src="img/ff.png" alt="">
             </div>
@@ -337,8 +339,9 @@
             <button class="btnFill">watch now <i class="fas fa-play-circle"></i></button>
         </div>
     </div>
+</section>
 
-    <section class="contentTitle tournament">
+    <section class="titleTournament tournament">
         <div class="title">
             <h3>our gaming tournament</h3>
 
@@ -467,7 +470,7 @@
         </div>
     </section>
 
-    <section class="contentTitle proPlayer">
+    <section class="titleProPlayer proPlayer">
         <div class="title">
             <h3>our pro players</h3>
             <p>Conveniently customize proactive web services for leveraged without continualliery</p>
@@ -554,7 +557,7 @@
     </section>
 
 
-    <section class="contentTitle gammingProduct">
+    <section class="titleProduct gammingProduct">
         <div class="title">
             <h3>gamming products </h3>
             <p>Conveniently customize proactive web services for leveraged </p>
@@ -624,25 +627,6 @@
         </div>
     </section>
 
-    <section class="sponsored">
-        <div class="content">
-            <div class="sponsoredBy">
-                <img src="img/top-1.png" alt="">
-            </div>
-            <div class="sponsoredBy">
-                <img src="img/top-2.png" alt="">
-            </div>
-            <div class="sponsoredBy">
-                <img src="img/top-4.png" alt="">
-            </div>
-            <div class="sponsoredBy">
-                <img src="img/top-3.png" alt="">
-            </div>
-            <div class="sponsoredBy">
-                <img src="img/top-5.png" alt="">
-            </div>
-        </div>
-    </section>
 
     <section class="newsLatter">
         <h3>signup for our newsletter</h3>
