--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                     </div>
                 </li>
                 <li>
-                    <h3><a href="blog.html">match</a> <i class="fas fa-chevron-down droped5" id="droped5"></i></h3>
+                    <h3><a href>match</a> <i class="fas fa-chevron-down droped5" id="droped5"></i></h3>
                     <div class="navigator5">
                         <ul>
-                            <li><a href="blog.html">match</a></li>
-                            <li><a href="blogDetails.html">match Details</a></li>
+                            <li><a href="match.html">match</a></li>
+                            <li><a href="matchDetails.html">match Details</a></li>
                         </ul>
                     </div>
                 </li>
