--- a/match.html
+++ b/match.html
@@ -24,7 +24,7 @@
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">pages +</button>
                 <div class="dropdown">
-                    <a href="aboutUs">about us</a>
+                    <a href="about.html">about us</a>
                     <a href="games.html">games</a>
                     <a href="gallery.html">gallery</a>
                     <a href="team.html">team</a>
